Handle hairy cycles: cycles where the last element in the cycle has dependencies. (bug 697906,r=dvander)